--- a/README
+++ b/README
@@ -6,12 +6,15 @@ Authors: Stefan Matthias Aust, Anders Bengtsson, Geert Bevin,
  Russ Freeman, Chad Fowler, Joey Gibson, Kiel Hodges, Xandy Johnson,
  Kelvin Liu, Alan Moore, Akinori Musha, Charles Nutter, Takashi Okamoto
  Jan Arne Petersen, Tobias Reif, David Saff, Ed Sinjiashvili, Daiki Ueno
- Matthias Veit, Jason Voegele, Sergey Yevtushenko, Robert Yokota
+ Matthias Veit, Jason Voegele, Sergey Yevtushenko, Robert Yokota, 
+ Ola Bini, Nick Sieger, and many gracious contributions from the community.
 
 Project Contact: Thomas E Enebo <enebo@acm.org>
 
-We also use code generously shared by the creator of the Ruby language, 
+JRuby also uses code generously shared by the creator of the Ruby language, 
 Yukihiro Matsumoto <matz@netlab.co.jp>.
+
+== About
 
 JRuby is the effort to recreate the Ruby (http://www.ruby-lang.org) interpreter
 in Java.
@@ -20,21 +23,18 @@ The Java version is be tightly integrated with Java to allow both to script
 any Java class and to embed the interpreter into any Java application. 
 See the 'docs' directory for more information.
 
-
-Run
-===
+== Run
 
     bin/jruby rubyfile.rb
 
 interprets the file 'rubyfile.rb'.
 
-Compiling from source
-=====================
+== Compiling from source
 
 You will need:
 
 * JDK 1.4 or greater
-* Apache Ant (http://jakarta.apache.org/ant/) 1.6 or greater.
+* Apache Ant (http://jakarta.apache.org/ant/) 1.6.2 or greater.
 
 To compile, just type:
 
@@ -42,19 +42,17 @@ To compile, just type:
 
 This will create a jruby.jar file in the projects 'lib' directory.
 
+== Testing
 
-Testing
-=======
+In order to run the unit tests, copy the lib/junit.jar file to either
+$ANT_HOME/lib/junit.jar or ~/.ant/lib/junit.jar.
 
 See 'docs/README.test' for more information.
 
-
-More Information
-================
+== More Information
 
 Visit http://jruby.codehaus.org for more information.
 
-License
-=======
+== License
 
 Read the COPYING file.
